Fix movie on iOS

--- a/src/post/content.css
+++ b/src/post/content.css
@@ -46,25 +46,6 @@
   overflow: hidden;
 }
 
-.postContent_mediaContainer-playing .postContent_videoOverlay {
-  opacity: 0;
-}
-
-.postContent_videoOverlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 100%;
-  width: 100%;
-  pointer-events: none;
-  display: flex;
-  background-color: rgba(0, 0, 0, 0.5);
-  align-items: center;
-  justify-content: center;
-}
-
 .postContent_videoPlayBtn {
   margin-bottom: 10px;
 }
